<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/choiceclass" >


    <!--     <com.ss.android.common.ui.view.SwipeOverlayFrameLayout -->
    <!--         android:id="@+id/swipe_overlay" -->
    <!--         android:layout_width="fill_parent" -->
    <!--         android:layout_height="wrap_content" -->
    <!--         android:layout_below="@id/title_bar" > -->


    <!--  开始-->
    <LinearLayout
        android:id="@+id/object_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/subject_base"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"

            android:text="@string/subject_base"/>

        <TextView
            android:id="@+id/subject_law"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"

            android:text="@string/subject_law"/>

        <TextView
            android:id="@+id/subject_computer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"

            android:text="@string/subject_computer" />

        <TextView
            android:id="@+id/subject_tax"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_bg"
            android:drawablePadding="3dp"

            android:gravity="center"

            android:text="@string/subject_tax"/>   <!--这只是文本，按钮在这里-->

    </LinearLayout>


    <View
        android:id="@+id/category_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="#ffffff"
        android:layout_below="@+id/object_menu"/>

    <!-- 中间主要内容   -->
    <FrameLayout
        android:layout_below="@+id/object_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container_subject"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/choiceclass">


    </FrameLayout>



</RelativeLayout>