<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.topnews.fragment.BaseFragment"
    android:background="@drawable/choiceclass">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:background="#9C27B0"
        android:id="@+id/law_chapter"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_marginTop="15dip">



        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/work_select_chapter"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dip"
            android:textColor="#ffffff"
            />

    </RelativeLayout>

    <RelativeLayout
        android:background="#9C27B0"
        android:id="@+id/law_real"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_below="@+id/law_chapter"
        android:layout_marginTop="15dip">

        <View
            android:id="@+id/category_line9"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_alignParentTop="true" />

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/work_select_real"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dip"
            android:textColor="#ffffff"
            />
    </RelativeLayout>

    <RelativeLayout
        android:background="#9C27B0"
        android:id="@+id/law_favorite"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:layout_below="@+id/law_real"
        android:layout_marginTop="15dip">

        <View
            android:id="@+id/category_line8"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#ffffff"
            android:layout_alignParentTop="true" />

        <TextView


            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/work_select_favorite"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dip"
            android:textColor="#ffffff"
            />
    </RelativeLayout>





</RelativeLayout>
